cmake_minimum_required(VERSION 3.21)
project(Altu_Bitu)

set(CMAKE_CXX_STANDARD 17)

add_executable(Altu_Bitu
        #main.cpp
        #10804.cpp
        #12840.cpp
        #11651.cpp
        #1758.cpp
        #1946.cpp
        #2776.cpp
        #11478.cpp
        #20291.cpp
        #1213.cpp
        #2108.cpp
        #11866.cpp
        #18115.cpp
        2841.cpp)
